tests/unit-fail-compilation/alignas.c.ref
alignas.c:3:1: error: Alignas attribute specifying an alignment less strict than would otherwise be required.
  Constraint violation (CV-TCANON1).
   see C11 section 6.7.5:4 http://rvdoc.org/C11/6.7.5
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors alignas.c to see commands run.
